# Client_server

./: README.md  csocket.cpp  csocket.h
Client/: CMakeLists.txt  main.cpp
Client/Release/: Client
Server/: CMakeLists.txt  main.cpp
Server/Release/: Server
